# ffxiv-island-sanctuary-craftwork

./: CNAME  README.md  index.html  ngld.html  vetur.config.js
assets/: config-230cf284.js  config-41706000.js  config-7112de35.js  config-84c3ec52.js  config-976bcf04.js  config-986b78c7.js  config-a9f40a4c.js  config-d68b2056.js  index-0032f6ed.css  index-0142e4ed.css  index-02066222.css  index-0225df7e.css  index-02c2e9dc.css  index-08d177d6.css  index-0baa7c4a.css  index-0fe845cc.css  index-16f8bf79.css  index-19d8b406.js  index-1bf9305c.css  index-24813c37.css  index-26adeeba.css  index-2bccf462.css  index-2d266e73.css  index-2d63c957.css  index-32ab03a2.css  index-32ec41f1.css  index-32f40a93.css  (+234 more)
mji-craftwork/: Cargo.toml
mji-craftwork/benches/my_benchmark/: main.rs  test_data.rs
mji-craftwork/src/: apiv2.rs  lib.rs
mji-craftwork/src/data/: demand.rs  favor.rs  mod.rs  popularity.rs  recipe.rs  repo.rs
mji-craftwork/src/gsolver/: favor.rs  mild.rs  mild_multi.rs  mod.rs  radical.rs
mji-craftwork/src/predition/: mod.rs  pattern.rs  pred.rs
mji-craftwork/src/simulator/: batch.rs  mod.rs  multi.rs  single.rs
mji-craftwork/src/solver/: bruce_force.rs  mod.rs  simplify.rs  simplify_adv.rs  solver.rs  solver_multi.rs  solver_single.rs  solver_with_batch.rs
mji-craftwork/test_data/: Cargo.toml
mji-craftwork/test_data/src/: lib.rs  pattern_code.rs  utils.rs
mji-craftwork/tests/: data.rs  gsolver.rs  predition.rs  simulate.rs  solver.rs  test_data.rs
mji-craftwork/tests/data/: craft_objects.rs  mod.rs  pattern_code.rs  popularity_list.rs  utils.rs
(+68 files in other folders)
