[package]
name = "mji-craftwork"
version = "0.1.0"
authors = ["Jim Jiang <jim@lotlab.org>"]
edition = "2018"
description = "FinalFantasy XIV island sanctuary craftwork solver"
repository = "https://github.com/Lotlab/ffxiv-mji-craftwork"
license = "apache2"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
# web-sys = { version = "0.3.60", features = ["console"]}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
pprof = { version = "0.11", features = ["flamegraph"] }
criterion = "0.3"
rand = "0.8"
base64 = "0.21"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true

[profile.test]
opt-level = 3

[[bench]]
name = "my_benchmark"
harness = false
